simplified execute_sql

--- a/config/.env
+++ b/config/.env
@@ -1,1 +1,1 @@
-MSSQLDB_CONN_STR="Driver={ODBC Driver 17 for SQL Server};Server=.;Database=testdb;UID=sa;PWD=<pwd>;"
+MSSQLDB_CONN_STR="Driver={ODBC Driver 17 for SQL Server};Server=.;Database=testdb;UID=sa;PWD=Passw0rd;"
